# Echobird-MotherAgent

./: .gitattributes  Cargo.toml  README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  index.html
.github/workflows/: release.yml
api/skills/: index.json
api/store/: models.json
api/version/: index.json
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  free-models.html  index.html  mobile.html  phone.html
docs/api/: engine-versions.json  free-models.json
docs/api/mother/: hints.json  system_prompt.md
docs/api/skills/: index.json
docs/api/store/: models.json
docs/api/tools/: deploy-local-ssh.md  harden-ssh.md  network-info.md  security-audit.md
docs/api/version/: index.json
docs/api/welcome/: ar.json  bn.json  cs.json  de.json  el.json  en.json  es.json  fa.json  fi.json  fr.json  he.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  tr.json  vi.json  zh-Hans.json  zh-Hant.json  zh.json
docs/download/: index.html
docs/roles/: TRANSLATE_TASK.md  role-prompts.txt  roles-en.json  roles-ja.json  roles-pt.json  roles-zh-Hans.json
download/: index.html
plugins/llm-server/: Cargo.toml
plugins/llm-server/src/: main.rs
plugins/openclaw/bridge/: Cargo.toml
plugins/openclaw/bridge/src/: main.rs
roles/: roles-en.json  roles-zh-Hans.json
src/: main.rs
(+207 files in other folders)
