[package]
name = "echobird-bridge"
version = "0.1.0"
edition = "2021"
description = "Echobird bridge for remote Agent communication via stdin/stdout JSON protocol"

[[bin]]
name = "echobird-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
